--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -604,6 +604,11 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .-mt-12 {
   margin-top: -3rem;
 }
@@ -630,6 +635,10 @@ video {
 
 .mt-6 {
   margin-top: 1.5rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
 }
 
 .block {
@@ -688,6 +697,10 @@ video {
   width: 18rem;
 }
 
+.w-1\/6 {
+  width: 16.666667%;
+}
+
 .max-w-5xl {
   max-width: 64rem;
 }
@@ -740,6 +753,10 @@ video {
 
 .rounded-2xl {
   border-radius: 1rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .rounded-t {
