--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1346,6 +1346,11 @@ video {
   line-height: 2.5rem;
 }
 
+.text-9xl {
+  font-size: 8rem;
+  line-height: 1;
+}
+
 .font-bold {
   font-weight: 700;
 }
